gitops/apps/homepage/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-tailnet
  annotations:
    tailscale.com/proxy-class: stable-proxies
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: homepage
      port:
        number: 80
  tls:
    - hosts:
        - homepage
